[doc] Update and improve the documentation.